@@ -30,6 +30,27 @@
             <summary>
             </summary>
             <bugs>
+                <bug id="1493" tool="jira">
+                    <description>
+		                Fixed problem with wrong class names for elements of named 
+                        &lt;complexType&gt; which are unbounded choice.
+                    </description>
+                    <contributor>
+                        <name>Simeon de Dios</name>
+                        <email>sdedios@lehman.com</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Simeon de Dios</name>
+                        <email>sdedios@lehman.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20060822</date>
+                </bug>
 				<bug id="1489" tool="jira">
                     <description>
 		                Added support for abstract &lt;complexType&gt; definitions.
