@@ -1,0 +1,16 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+    <Name>Complex type with unbounded choice</Name>
+    <Author>Werner Guttmann</Author>
+    <Comment>See CASTOR-1493</Comment>
+    <Category>basic capability</Category>
+    <SourceGeneratorTest>
+      <Schema>unbounded-choice.xsd</Schema>
+      <Root_Object random="false" dump="true">TestTop</Root_Object>
+      <UnitTestCase>
+         <Name>Test Generation</Name>
+         <Input>input.xml</Input>
+      </UnitTestCase>
+	</SourceGeneratorTest>
+</TestDescriptor>
+
